test/compile_errors/err_fstring_spec_float_mode_on_int.w
//! expect-check-fail: format mode requires float type
fn main:
    let x = 42
    print(f"{x:f}")
